--- a/README.rdoc
+++ b/README.rdoc
@@ -104,6 +104,10 @@ To send an invitation to a user, use the <tt>invite!</tt> class method. <tt>:ema
   User.invite!(:email => "new_user@example.com", :name => "John Doe")
   # => an invitation email will be sent to new_user@example.com
 
+There may be times when you don't want to automatically send the invitation email.  You can use <tt>invite_without_notification!</tt> to create the invitation without sending the invitation email.
+  User.invite_without_notification!(:email => "new_user@example.com", :name => "John Doe")
+  # => the user and invitation token will be created, but an email will not be sent
+
 === Accept an invitation
 
 To accept an invitation with a token use the <tt>accept_invitation!</tt> class method. <tt>:invitation_token</tt> must be present in the parameters hash. You can also include other attributes in the hash.
